# glwr

./: .clang-format  CMakeLists.txt  README.md  run
lib/: CMakeLists.txt
src/: application.cpp  application.hpp  event.hpp  event_manager.hpp  global_state.cpp  global_state.hpp  main.cpp  window.cpp  window.hpp
src/manager/: event_manager.hpp
